corrected css for imprint page (too long lines)

--- a/public/styles.css
+++ b/public/styles.css
@@ -1264,6 +1264,7 @@ nav li a {
 
 .imprint p {
     margin-bottom: 0.75em;
+    word-break: break-word;
 }
 
 /*****************************************/
